@@ -1,5 +1,3 @@
-# ENV['RUBYOPT'] = '-W1'
-
 require 'rubygems'
 require 'rake'
 require 'rake/testtask'
@@ -55,5 +53,34 @@ begin
   end
 rescue LoadError
   puts 'Ruby-prof not available. Profiling tests are disabled.'
+end
+
+begin
+  require 'metric_fu'
+  MetricFu::Configuration.run do |config|
+    #define which metrics you want to use
+    config.metrics  = [:churn, :flog, :flay, :reek, :roodi, :rcov] # :saikuro, :stats
+    config.flay     = { :dirs_to_flay => ['lib']  } 
+    config.flog     = { :dirs_to_flog => ['lib']  }
+    config.reek     = { :dirs_to_reek => ['lib']  }
+    config.roodi    = { :dirs_to_roodi => ['lib'] }
+    config.saikuro  = { :output_directory => 'scratch_directory/saikuro', 
+                        :input_directory => ['lib'],
+                        :cyclo => "",
+                        :filter_cyclo => "0",
+                        :warn_cyclo => "5",
+                        :error_cyclo => "7",
+                        :formater => "text"} #this needs to be set to "text"
+    config.churn    = { :start_date => "1 year ago", :minimum_churn_count => 10}
+    config.rcov     = { :test_files => ['spec/**/*_spec.rb'],
+                        :rcov_opts => ["--sort coverage", 
+                                       "--no-html", 
+                                       "--text-coverage",
+                                       "--no-color",
+                                       "--profile",
+                                       "--exclude spec"]}
+  end
+rescue LoadError
+  puts 'Install metric_fu for code quality metric tests.'
 end
 
