@@ -1,5 +1,7 @@
 module RecordFilter
   class Order # :nodoc: all
+    include ColumnParser
+
     attr_reader :column, :direction, :table
 
     def initialize(column, direction, table)
@@ -10,18 +12,9 @@ module RecordFilter
       dir = case @direction
         when :asc then 'ASC'
         when :desc then 'DESC'
+        else raise InvalidFilterException.new("An invalid order of #{@direction} was specified.") 
       end
-      
-      table, column = @table, @column
-      while column.is_a?(Hash)
-        table = table.join_association(column.keys[0]).right_table
-        column = column.values[0]
-      end
-
-      if (!table.has_column(column))
-        raise ColumnNotFoundException.new("The column #{column} was not found in #{table.table_name}.")
-      end
-
+      column, table = parse_column_in_table(@column, @table)
       "#{table.table_alias}.#{column} #{dir}"
     end
   end
